added otherYes and otherNo

--- a/finServiceComplaints-Part2.ipynb
+++ b/finServiceComplaints-Part2.ipynb
@@ -260,7 +260,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "270596\n",
+      "4088\n",
+      "274684\n"
+     ]
+    }
+   ],
+   "source": [
+    "nBanks = 100\n",
+    "dfgTopN = dfg.head(nBanks) \n",
+    "dfgOther = dfg[nBanks:len(dfg.index)] # the other banks that didn't make the topN\n",
+    "print (dfgOther.loc[df['Responsive'] == 'Yes']['All_Issues'].sum())\n",
+    "print (dfgOther.loc[df['Responsive'] == 'No']['All_Issues'].sum())\n",
+    "print (dfgOther['All_Issues'].sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -327,12 +351,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>96</td>\n",
-       "      <td>1446</td>\n",
-       "      <td>CORELOGIC INC</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>97</td>\n",
        "      <td>1417</td>\n",
        "      <td>AMERICAN HONDA FINANCE CORP</td>\n",
@@ -352,13 +370,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>274684</td>\n",
+       "      <td>270596</td>\n",
        "      <td>Other</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>101</td>\n",
+       "      <td>4088</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>101 rows × 3 columns</p>\n",
+       "<p>102 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -369,216 +393,32 @@
        "3         87090      BANK OF AMERICA, NATIONAL ASSOCIATION        Yes\n",
        "4         72928                      WELLS FARGO & COMPANY        Yes\n",
        "..          ...                                        ...        ...\n",
-       "96         1446                              CORELOGIC INC        Yes\n",
        "97         1417                AMERICAN HONDA FINANCE CORP        Yes\n",
        "98         1415                    HYUNDAI CAPITAL AMERICA        Yes\n",
        "99         1407  RoundPoint Mortgage Servicing Corporation        Yes\n",
-       "100      274684                                      Other          0\n",
+       "100      270596                                      Other        Yes\n",
+       "101        4088                                      Other         No\n",
        "\n",
-       "[101 rows x 3 columns]"
+       "[102 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nBanks = 100\n",
-    "dfgTopN = dfg.head(nBanks) \n",
-    "dfgTopN['Company']\n",
-    "dfgAppend = dfg[nBanks:len(dfg.index)] # the other banks that didn't make the topN\n",
-    "dfgAppend = pd.DataFrame({\"Company\":['Other'],\n",
-    "                          \"All_Issues\": dfgOther['All_Issues'].sum()})\n",
-    "dfgTopN.append(dfgAppend, sort=True, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Company</th>\n",
-       "      <th>Responsive</th>\n",
-       "      <th>AES/PHEAA</th>\n",
-       "      <th>AFNI INC.</th>\n",
-       "      <th>ALLY FINANCIAL INC.</th>\n",
-       "      <th>AMERICAN EXPRESS COMPANY</th>\n",
-       "      <th>AMERICAN HONDA FINANCE CORP</th>\n",
-       "      <th>Ad Astra Recovery Services Inc</th>\n",
-       "      <th>Alliance Data Card Services</th>\n",
-       "      <th>Allied Interstate LLC</th>\n",
-       "      <th>BANK OF AMERICA, NATIONAL ASSOCIATION</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Specialized Loan Servicing Holdings LLC</th>\n",
-       "      <th>TCF NATIONAL BANK</th>\n",
-       "      <th>TD BANK US HOLDING COMPANY</th>\n",
-       "      <th>TOYOTA MOTOR CREDIT CORPORATION</th>\n",
-       "      <th>TRANSUNION INTERMEDIATE HOLDINGS, INC.</th>\n",
-       "      <th>TRANSWORLD SYSTEMS INC</th>\n",
-       "      <th>U.S. BANCORP</th>\n",
-       "      <th>UNITED SERVICES AUTOMOBILE ASSOCIATION</th>\n",
-       "      <th>WELLS FARGO &amp; COMPANY</th>\n",
-       "      <th>WESTERN UNION COMPANY, THE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1590.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3697.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>10312.0</td>\n",
-       "      <td>2863.0</td>\n",
-       "      <td>6474.0</td>\n",
-       "      <td>15962.0</td>\n",
-       "      <td>1417.0</td>\n",
-       "      <td>1763.0</td>\n",
-       "      <td>7808.0</td>\n",
-       "      <td>1608.0</td>\n",
-       "      <td>87090.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5098.0</td>\n",
-       "      <td>1947.0</td>\n",
-       "      <td>11266.0</td>\n",
-       "      <td>2106.0</td>\n",
-       "      <td>132192.0</td>\n",
-       "      <td>5127.0</td>\n",
-       "      <td>19134.0</td>\n",
-       "      <td>6660.0</td>\n",
-       "      <td>72928.0</td>\n",
-       "      <td>2679.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 99 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Company Responsive  AES/PHEAA  AFNI INC.  ALLY FINANCIAL INC.  \\\n",
-       "0                0        0.0        0.0                  0.0   \n",
-       "1               No        0.0        0.0                  0.0   \n",
-       "2              Yes    10312.0     2863.0               6474.0   \n",
-       "\n",
-       "Company  AMERICAN EXPRESS COMPANY  AMERICAN HONDA FINANCE CORP  \\\n",
-       "0                             0.0                          0.0   \n",
-       "1                             0.0                          0.0   \n",
-       "2                         15962.0                       1417.0   \n",
-       "\n",
-       "Company  Ad Astra Recovery Services Inc  Alliance Data Card Services  \\\n",
-       "0                                   0.0                          0.0   \n",
-       "1                                   0.0                          0.0   \n",
-       "2                                1763.0                       7808.0   \n",
-       "\n",
-       "Company  Allied Interstate LLC  BANK OF AMERICA, NATIONAL ASSOCIATION  ...  \\\n",
-       "0                          0.0                                    0.0  ...   \n",
-       "1                          0.0                                 1590.0  ...   \n",
-       "2                       1608.0                                87090.0  ...   \n",
-       "\n",
-       "Company  Specialized Loan Servicing Holdings LLC  TCF NATIONAL BANK  \\\n",
-       "0                                            0.0                0.0   \n",
-       "1                                            0.0                0.0   \n",
-       "2                                         5098.0             1947.0   \n",
-       "\n",
-       "Company  TD BANK US HOLDING COMPANY  TOYOTA MOTOR CREDIT CORPORATION  \\\n",
-       "0                               0.0                              0.0   \n",
-       "1                               0.0                              0.0   \n",
-       "2                           11266.0                           2106.0   \n",
-       "\n",
-       "Company  TRANSUNION INTERMEDIATE HOLDINGS, INC.  TRANSWORLD SYSTEMS INC  \\\n",
-       "0                                           0.0                     0.0   \n",
-       "1                                           0.0                     0.0   \n",
-       "2                                      132192.0                  5127.0   \n",
-       "\n",
-       "Company  U.S. BANCORP  UNITED SERVICES AUTOMOBILE ASSOCIATION  \\\n",
-       "0                 0.0                                     0.0   \n",
-       "1                 0.0                                     0.0   \n",
-       "2             19134.0                                  6660.0   \n",
-       "\n",
-       "Company  WELLS FARGO & COMPANY  WESTERN UNION COMPANY, THE  \n",
-       "0                          0.0                         0.0  \n",
-       "1                       3697.0                         0.0  \n",
-       "2                      72928.0                      2679.0  \n",
-       "\n",
-       "[3 rows x 99 columns]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfpivot = dfgTopN.pivot(index='Responsive', columns='Company', values='All_Issues')\n",
-    "dfpivot = dfpivot.reset_index()\n",
-    "dfpivot = dfpivot.fillna(0)\n",
-    "dfpivot"
+    "dfgAppendYes = pd.DataFrame({\"Company\":['Other'],\n",
+    "                          \"All_Issues\": dfgOther.loc[df['Responsive'] == 'Yes']['All_Issues'].sum()})\n",
+    "dfgAppendNo = pd.DataFrame({\"Company\":['Other'],\n",
+    "                          \"All_Issues\": dfgOther.loc[df['Responsive'] == 'No']['All_Issues'].sum()})\n",
+    "\n",
+    "dfgAppendYes['Responsive'] = 'Yes'\n",
+    "dfgAppendNo['Responsive'] = 'No'\n",
+    "\n",
+    "dfgA = dfgTopN.append(dfgAppendYes, sort=True, ignore_index=True)\n",
+    "dfgA = dfgA.append(dfgAppendNo, sort=True, ignore_index=True)\n",
+    "dfgA"
    ]
   },
   {
