added yes/no groupby with size

--- a/finServiceComplaints-Part2.ipynb
+++ b/finServiceComplaints-Part2.ipynb
@@ -528,23 +528,338 @@
    ],
    "source": [
     "dfreducedOther = dfreduced.loc[dfreduced['Company'].isin(dfgTop['Company']) == False]\n",
-    "dfreducedOther = dfreducedOther.assign(Company = 'Other')\n",
+    "dfreducedOther = dfreducedOther.assign(Company = 'Other') # any bank that is not in the top\n",
     "dfreducedOther"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Responsive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Experian Information Solutions Inc.</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>TRANSUNION INTERMEDIATE HOLDINGS, INC.</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>TRANSUNION INTERMEDIATE HOLDINGS, INC.</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>TRANSUNION INTERMEDIATE HOLDINGS, INC.</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>Experian Information Solutions Inc.</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1517611</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1517613</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1517615</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1517616</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1517617</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1517620 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        Company Responsive\n",
+       "1           Experian Information Solutions Inc.        Yes\n",
+       "2        TRANSUNION INTERMEDIATE HOLDINGS, INC.        Yes\n",
+       "7        TRANSUNION INTERMEDIATE HOLDINGS, INC.        Yes\n",
+       "11       TRANSUNION INTERMEDIATE HOLDINGS, INC.        Yes\n",
+       "12          Experian Information Solutions Inc.        Yes\n",
+       "...                                         ...        ...\n",
+       "1517611                                   Other        Yes\n",
+       "1517613                                   Other        Yes\n",
+       "1517615                                   Other        Yes\n",
+       "1517616                                   Other        Yes\n",
+       "1517617                                   Other        Yes\n",
+       "\n",
+       "[1517620 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfA = dfreducedTop.append(dfreducedOther) \n",
+    "dfA"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Responsive  Company                               \n",
+       "No          BANK OF AMERICA, NATIONAL ASSOCIATION       1590\n",
+       "            CAPITAL ONE FINANCIAL CORPORATION             71\n",
+       "            CITIBANK, N.A.                               363\n",
+       "            EQUIFAX, INC.                               1675\n",
+       "            Experian Information Solutions Inc.            8\n",
+       "            JPMORGAN CHASE & CO.                          96\n",
+       "            Navient Solutions, LLC.                        3\n",
+       "            Ocwen Financial Corporation                  543\n",
+       "            Other                                      27447\n",
+       "            TRANSUNION INTERMEDIATE HOLDINGS, INC.        95\n",
+       "            WELLS FARGO & COMPANY                       3697\n",
+       "Yes         BANK OF AMERICA, NATIONAL ASSOCIATION      87090\n",
+       "            CAPITAL ONE FINANCIAL CORPORATION          41241\n",
+       "            CITIBANK, N.A.                             54401\n",
+       "            EQUIFAX, INC.                             151153\n",
+       "            Experian Information Solutions Inc.       135717\n",
+       "            JPMORGAN CHASE & CO.                       66569\n",
+       "            Navient Solutions, LLC.                    31842\n",
+       "            Ocwen Financial Corporation                28722\n",
+       "            Other                                     680177\n",
+       "            TRANSUNION INTERMEDIATE HOLDINGS, INC.    132192\n",
+       "            WELLS FARGO & COMPANY                      72928\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ag = dfA.groupby(['Responsive','Company']).size()\n",
+    "Ag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Responsive</th>\n",
+       "      <th>Company</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td rowspan=\"11\" valign=\"top\">No</td>\n",
+       "      <td>BANK OF AMERICA, NATIONAL ASSOCIATION</td>\n",
+       "      <td>1590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>CAPITAL ONE FINANCIAL CORPORATION</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>CITIBANK, N.A.</td>\n",
+       "      <td>363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>EQUIFAX, INC.</td>\n",
+       "      <td>1675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Experian Information Solutions Inc.</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>JPMORGAN CHASE &amp; CO.</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Navient Solutions, LLC.</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Ocwen Financial Corporation</td>\n",
+       "      <td>543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Other</td>\n",
+       "      <td>27447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>TRANSUNION INTERMEDIATE HOLDINGS, INC.</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>WELLS FARGO &amp; COMPANY</td>\n",
+       "      <td>3697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td rowspan=\"11\" valign=\"top\">Yes</td>\n",
+       "      <td>BANK OF AMERICA, NATIONAL ASSOCIATION</td>\n",
+       "      <td>87090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>CAPITAL ONE FINANCIAL CORPORATION</td>\n",
+       "      <td>41241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>CITIBANK, N.A.</td>\n",
+       "      <td>54401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>EQUIFAX, INC.</td>\n",
+       "      <td>151153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Experian Information Solutions Inc.</td>\n",
+       "      <td>135717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>JPMORGAN CHASE &amp; CO.</td>\n",
+       "      <td>66569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Navient Solutions, LLC.</td>\n",
+       "      <td>31842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Ocwen Financial Corporation</td>\n",
+       "      <td>28722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Other</td>\n",
+       "      <td>680177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>TRANSUNION INTERMEDIATE HOLDINGS, INC.</td>\n",
+       "      <td>132192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>WELLS FARGO &amp; COMPANY</td>\n",
+       "      <td>72928</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     size\n",
+       "Responsive Company                                       \n",
+       "No         BANK OF AMERICA, NATIONAL ASSOCIATION     1590\n",
+       "           CAPITAL ONE FINANCIAL CORPORATION           71\n",
+       "           CITIBANK, N.A.                             363\n",
+       "           EQUIFAX, INC.                             1675\n",
+       "           Experian Information Solutions Inc.          8\n",
+       "           JPMORGAN CHASE & CO.                        96\n",
+       "           Navient Solutions, LLC.                      3\n",
+       "           Ocwen Financial Corporation                543\n",
+       "           Other                                    27447\n",
+       "           TRANSUNION INTERMEDIATE HOLDINGS, INC.      95\n",
+       "           WELLS FARGO & COMPANY                     3697\n",
+       "Yes        BANK OF AMERICA, NATIONAL ASSOCIATION    87090\n",
+       "           CAPITAL ONE FINANCIAL CORPORATION        41241\n",
+       "           CITIBANK, N.A.                           54401\n",
+       "           EQUIFAX, INC.                           151153\n",
+       "           Experian Information Solutions Inc.     135717\n",
+       "           JPMORGAN CHASE & CO.                     66569\n",
+       "           Navient Solutions, LLC.                  31842\n",
+       "           Ocwen Financial Corporation              28722\n",
+       "           Other                                   680177\n",
+       "           TRANSUNION INTERMEDIATE HOLDINGS, INC.  132192\n",
+       "           WELLS FARGO & COMPANY                    72928"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfAg = dfA.groupby(['Responsive','Company']).size().to_frame('Count').sort_values('Count', ascending=False)\n",
+    "dfAg"
+   ]
   }
  ],
  "metadata": {
