--- a/aws/aws_optimization.ipynb
+++ b/aws/aws_optimization.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -61,24 +61,6 @@
        "      <td>i-0ca364ec6656ff517</td>\n",
        "      <td>0.166667</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-03-23 18:20:00+00:00</td>\n",
-       "      <td>i-0ca364ec6656ff517</td>\n",
-       "      <td>0.169492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-03-23 19:30:00+00:00</td>\n",
-       "      <td>i-0ca364ec6656ff517</td>\n",
-       "      <td>0.166667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-03-23 19:45:00+00:00</td>\n",
-       "      <td>i-0ca364ec6656ff517</td>\n",
-       "      <td>0.166667</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -86,19 +68,161 @@
       "text/plain": [
        "                    datetime           instanceId  maxCPUPercent\n",
        "0  2020-03-23 20:40:00+00:00  i-0ca364ec6656ff517       0.169492\n",
-       "1  2020-03-23 22:45:00+00:00  i-0ca364ec6656ff517       0.166667\n",
-       "2  2020-03-23 18:20:00+00:00  i-0ca364ec6656ff517       0.169492\n",
-       "3  2020-03-23 19:30:00+00:00  i-0ca364ec6656ff517       0.166667\n",
-       "4  2020-03-23 19:45:00+00:00  i-0ca364ec6656ff517       0.166667"
+       "1  2020-03-23 22:45:00+00:00  i-0ca364ec6656ff517       0.166667"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>maxCPUPercent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>127.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.065994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.899760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.163934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.169492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>33.166667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       maxCPUPercent\n",
+       "count     127.000000\n",
+       "mean        2.065994\n",
+       "std         3.899760\n",
+       "min         0.163934\n",
+       "25%         0.166667\n",
+       "50%         0.169492\n",
+       "75%         3.333333\n",
+       "max        33.166667"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "instanceId\n",
+       "i-089389afc8097dac4    0.501436\n",
+       "i-09f0182499b5eaf27    4.235662\n",
+       "i-0ca364ec6656ff517    0.514968\n",
+       "Name: maxCPUPercent, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfG = df.groupby('instanceId')['maxCPUPercent'].mean()\n",
+    "dfG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['i-0ca364ec6656ff517', 'i-09f0182499b5eaf27',\n",
+       "       'i-089389afc8097dac4'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "instances = df.instanceId.unique()\n",
+    "instances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfP = df.pivot(index=df['datetime'], columns='instanceId')['maxCPUPercent']\n",
+    "dfP = dfP.fillna(0)\n",
+    "dfP"
    ]
   }
  ],
