--- a/aws/aws_optimization.ipynb
+++ b/aws/aws_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "9  2020-03-23 22:30:00+00:00  i-0ca364ec6656ff517       0.169492"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,54 +134,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "instanceId\n",
-       "i-089389afc8097dac4    0.501436\n",
-       "i-09f0182499b5eaf27    4.235662\n",
-       "i-0ca364ec6656ff517    0.514968\n",
-       "Name: maxCPUPercent, dtype: float64"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       maxCPUPercent\n",
+      "count     127.000000\n",
+      "mean        2.065994\n",
+      "std         3.899760\n",
+      "min         0.163934\n",
+      "25%         0.166667\n",
+      "50%         0.169492\n",
+      "75%         3.333333\n",
+      "max        33.166667\n",
+      "instanceId\n",
+      "i-089389afc8097dac4    0.501436\n",
+      "i-09f0182499b5eaf27    4.235662\n",
+      "i-0ca364ec6656ff517    0.514968\n",
+      "Name: maxCPUPercent, dtype: float64\n",
+      "2020-03-24 15:25:00+00:00\n",
+      "2020-03-23 17:50:00+00:00\n"
+     ]
     }
    ],
    "source": [
+    "print(df.describe())\n",
     "dfG = df.groupby('instanceId')['maxCPUPercent'].mean()\n",
-    "dfG"
+    "#instances = df.instanceId.unique()\n",
+    "print(dfG)\n",
+    "#print(instances)\n",
+    "print(df['datetime'].max())\n",
+    "print(df['datetime'].min())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['i-0ca364ec6656ff517', 'i-09f0182499b5eaf27',\n",
-       "       'i-089389afc8097dac4'], dtype=object)"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "instances = df.instanceId.unique()\n",
-    "instances"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
