--- a/aws/aws_optimization.ipynb
+++ b/aws/aws_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "9  2020-03-23 22:30:00+00:00  i-0ca364ec6656ff517       0.169492"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,10 +126,21 @@
     "import time\n",
     "import dateutil\n",
     "\n",
+    "from scale import boundaryScale\n",
+    "\n",
     "headers = ['datetime','instanceId','maxCPUPercent']\n",
     "data = '/home/joe/data/aws/out.txt'\n",
     "df = pd.read_csv(data, names=headers)\n",
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['maxCPUPercent'] * "
    ]
   },
   {
